--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoiop5uj6s5905IM7qrnZkWdj0MEuhK4Q"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
