--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>React App</title>
     <script
+      src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%"
       async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoiop5uj6s5905IM7qrnZkWdj0MEuhK4Q"
+      defer
     ></script>
   </head>
   <body>
